# touch-mcp

./: README.md  pyproject.toml  test_live.py
src/touch_mcp/: __main__.py  cli.py  errors.py  server.py
src/touch_mcp/bridge/: __init__.py  connection.py  protocol.py
src/touch_mcp/tools/: batch.py  connections.py  data.py  layout.py  nodes.py  parameters.py  project.py  render.py  scripts.py  timeline.py
td/: BUILD_TOX.md  callbacks.py  command_router.py  touch_mcp.tox
tests/: conftest.py  test_connection.py  test_protocol.py  test_tools.py
