[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "touch-mcp"
version = "0.1.0"
description = "High-performance MCP server for TouchDesigner — live control via WebSocket"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
touch-mcp = "touch_mcp.cli:main"
